# routes/users.js
@@ -1,33 +1,20 @@
 const express = require('express');
-const User = require('../models/User');
+const { getAll, getSingle, createUser, updateUser, deleteUser } = require('../controllers/users');
 const router = express.Router();
 
 // Create a new user
-router.post('/', async (req, res) => {
-    const { name, email, password, role, isActive } = req.body;
-    try {
-        const newUser = new User({
-            name,
-            email,
-            password,
-            role,
-            isActive
-        });
-        await newUser.save();
-        res.status(201).json(newUser);
-    } catch (err) {
-        res.status(500).json({ message: err.message });
-    }
-});
+router.post('/', createUser);
 
 // Get all users
-router.get('/', async (req, res) => {
-    try {
-        const users = await User.find();
-        res.status(200).json(users);
-    } catch (err) {
-        res.status(500).json({ message: err.message });
-    }
-});
+router.get('/', getAll);
+
+// Get a user by ID
+router.get('/:id', getSingle);
+
+// Update a user by ID
+router.put('/:id', updateUser);
+
+// Delete a user by ID
+router.delete('/:id', deleteUser);
 
 module.exports = router;
